Fix z-index for mob menu

--- a/docroot/themes/custom/shops/style/scss/components/_menu.scss
+++ b/docroot/themes/custom/shops/style/scss/components/_menu.scss
@@ -70,7 +70,7 @@ $width-menu: 300px;
 
 .mobile-navigation {
   position: fixed;
-  z-index: 110;
+  z-index: 600;
   top: 0;
   left: 0;
 
